--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,13 +7,15 @@ android {
         applicationId "com.tyler.lockpick"
         minSdkVersion 21
         targetSdkVersion 23
-        versionName '2'
-        versionCode 2
+        versionName '3'
+        versionCode 3
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+        buildType {
         }
     }
     dexOptions {
